# GetPocket.rs

./: Cargo.toml  README.md
examples/: list.rs
src/: client.rs  request.rs
src/ext/: adding.rs  bulk.rs  mod.rs  modifying.rs  retrieving.rs  tags.rs
tests/: test_helper.rs
