[package]
name = "getpocket"
version = "0.2.6"
edition = "2021"
description = "Rust crate for GetPocket API (https://getpocket.com/)"
repository = "https://github.com/misha-krainik/GetPocket.rs"
license-file = "LICENSE.txt"
rust-version = "1.65"
authors = ["Mykhailo Krainik <code.replica558@passmail.net>"]
keywords = ["getpocket", "afterread", "pocket", "api", "rust"]
readme = "README.md"
exclude = [
    ".gitignore",
]

[features]
default = []
extended = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.14"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "add"
path = "examples/add.rs"

[[example]]
name = "modify"
path = "examples/modify.rs"

[dev-dependencies]
dotenvy = "0.15"
webbrowser = "0.8.3"
lazy_static = "1.4.0"
